--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap") layer(base);
 @import "tailwindcss";
 @plugin "./plugins/text-shadow.ts";
 @plugin "./plugins/themes.ts";
