style: update font-icomoon to use Montserrat

--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,7 @@
   }
 
   /* Fonts */
-  --font-icomoon: "icomoon", var(--font-sans);
+  --font-icomoon: "icomoon", "Montserrat";
   --font-sans: "Montserrat", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
